# cosmos-houdini-pipeline

./: .cosmos-complete.bash  .coverage  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS_AND_REFACTORING.md  CHANGELOG.md  CLAUDE.md  CLAUDE_old.md  CLAUDE_original.md  CLEANUP_PLAN.md  CLI_INVESTIGATION_SUMMARY.md  CLI_MIGRATION_ANALYSIS.md  CLI_MIGRATION_CHECKLIST.md  CLI_MIGRATION_PLAN.md  CLI_TEST_PROGRESS.md  CODEBASE_ISSUES_ANALYSIS.md  CODEBASE_ISSUES_COMPREHENSIVE.md  DEAD_CODE_CLEANUP_RECOMMENDATIONS.md  DEVELOPMENT_BEST_PRACTICES.md  DEVELOPMENT_PLAN.md  FIX_BATCH_INFERENCE.md  FIX_PARAMETERS_TAB.md  GRADIO_IMPROVEMENTS.md  HANDOVER_DATA_ARCHITECTURE.md  HANDOVER_TEST_REFACTOR.md  LINTING_SETUP.md  LOGGING_FIXES.md  MIGRATION_NOTES.md  Makefile  PHASE2_MOCK_REDUCTION_SUMMARY.md  PHASE3_COVERAGE_IMPROVEMENT_SUMMARY.md  QUEUE_ENHANCEMENT_PLAN.md  QUEUE_IMPLEMENTATION.md  README.md  REFACTORING_PLAN.md  REFACTOR_TEST_RESULTS.md  REFERENCE.md  (+45 more)
.claude/: FILENAME_UPDATE_HANDOVER.md  HANDOVER_PROMPT.md  UI_IMPROVEMENT_PLAN.md  UI_REFACTORING_HANDOVER.md  check_runs.py  settings.json  settings.local.json  statusline-command.sh  test_fixes.py  test_output_details.py  test_output_details_fix.py  test_ui_manual.py
.claude/agents/: code-reviewer.md  commit-handler.md  doc-drafter.md  feature-context-analyzer.md  overfit-verifier.md  researcher.md  test-runner.md
.claude/commands/: check-verification.md  claude-editor.md  tdd.md  verify-feature.md  verify-overfit.md  verify-review.md
.claude/reports/: README.md
.claude/subagents/: code-reviewer.md  commit-handler.md  doc-drafter.md  overfit-verifier.md  test-runner.md
.claude/workspace/: .gitignore  README.md  linting-summary.md  simple-pre-commit.yaml
.cursor/rules/: readmeupdate.mdc  update-readme.mdc
.github/workflows/: test.yml
MagicMock/Path().__truediv__()/: 2283830756448
cosmos_workflow/: README.md  __init__.py  __main__.py  cli.py  main.py
cosmos_workflow/api/: __init__.py  cosmos_api.py  workflow_operations.py
cosmos_workflow/cli/: __init__.py  base.py  batch_inference.py  completions.py  create.py  delete.py  enhance.py  generate.py  helpers.py  inference.py  kill.py  list_commands.py  prepare.py  search.py  show.py  status.py  stream.py  ui.py  upscale.py  verify.py
cosmos_workflow/cli_new/: __init__.py  completions.py  create.py  enhance.py  helpers.py  inference.py  prepare.py  status.py
cosmos_workflow/config/: __init__.py  config.toml  config_manager.py  run_types.py
cosmos_workflow/connection/: __init__.py  ssh_manager.py
cosmos_workflow/database/: __init__.py  connection.py  (+1 more)
docs/: API.md  ARCHITECTURE_REFACTOR.md  BASH_SHORTCUTS.md  BATCH_GENERATION.md  BATCH_INFERENCE.md  BATCH_UPSAMPLING_INTEGRATION_PLAN.md  CODE_QUALITY_REPORT.md  COSMOS_REFACTORING_PLAN.md  DATABASE.md  DEVELOPMENT.md  FAILING_TESTS_ANALYSIS.md  FINAL_CLEAN_TEST_STATE.md  FINAL_TEST_STATE.md  GITHUB_CLI.md  GPU_OPERATIONS_UNIFICATION_PLAN.md  GRADIO_REFACTOR_PLAN.md  GRADIO_UI_BUGFIXES.md  GRADIO_UI_IMPROVEMENTS.md  GREEN_BASELINE_ACHIEVED.md  MERGE_STRATEGY_PLAN.md  NEXT_SESSION_PROMPT.md  PARALLEL_BRANCH_SUMMARY.md  PROMPT_UPSAMPLING_INSIGHTS.md  QUEUE_IMPLEMENTATION_PLAN.md  README.md  REFACTOR_enhancement_metadata.md  REFACTOR_upscaling_batch_features.md  SCRIPT_CLEANUP_PLAN.md  SERVICE_LAYER_REFACTORING_PLAN.md  SESSION_SUMMARY_2025_08_31.md  SESSION_SUMMARY_2025_09_01.md  SHELL_COMPLETION.md  SMART_BATCHING.md  SMART_BATCHING_IMPLEMENTATION_PROMPT.md  SMART_BATCHING_PLAN.md  SMART_BATCHING_STATUS.md  TDD_HANDOVER.md  TDD_WORKFLOW.md  TESTING_RESULTS.md  TESTING_STRATEGY.md  (+16 more)
inputs/: test_upsample_batch.json
notes/: experiment_log.md
outputs/: houdini_test_metadata.json
outputs_backup/: batch_results_test.json  upsampled_upsample_batch_20250903_110548.json  upsampled_upsample_batch_20250904_022242.json  upsampled_upsample_batch_20250904_023142.json  upsampled_upsample_batch_20250904_023735.json
resolution_test_results/: results_partial_1756672968.json
scripts/: batch_inference.sh  batch_token_test.py  check_remote_results.py  check_thumbnail.py  config.sh  convert_png_sequences.sh  debug_upsampler.py  deploy_and_test_upsampler.py  deploy_resolution_test.py  direct_test.py  download_results.sh  fast_token_test.py  force_spawn_upsampler.py  full_cycle.sh  generate_missing_thumbnails.py  import_json_prompts.py  inference.sh  migrate_logs.py  new_prompt.sh  nvidia_style_upsampler.py  persistent_upsampler_test.py  prompt_upsampler.py  quick_test_upsampler.py  quick_token_check.py  remote_resolution_test.py  run_inference_remote.sh  run_remote_upsampler.py  run_upsampler_docker.sh  run_upscale_remote.sh  simple_batch_test.py  simple_prompt_upsampler.py  simple_token_tests.py  ssh_lambda.sh  standalone_upsampler.py  test_actual_resolution_limits.py  test_nvidia_upsampler.py  test_standalone_upsampler.py  test_token_limit_config.py  test_token_limits.py  test_upsampler_local.py  (+9 more)
testing/: create_test_prompts.py  create_test_videos.py  run_upsample_tests.py  upsample_test_plan.md
tests/: BEHAVIOR_TESTING_GUIDE.md  FAKES_VS_MOCKS_CLARIFICATION.md  FINAL_TEST_IMPROVEMENTS_SUMMARY.md  FIX_OR_REVERT_DECISION.md  IMPROVEMENT_METRICS_COMPARISON.md  MERGE_STRATEGY.md  MIGRATION_ACTION_PLAN.md  MUTATION_TESTING_GUIDE.md  MUTATION_TEST_RESULTS.md  README.md  REORGANIZATION_PLAN.md  REVERT_SUMMARY.md  SIMPLE_TESTING_EXPLANATION.md  TESTING_STRATEGY_ANALYSIS.md  TEST_FIXES_SUMMARY.md  TEST_FIXING_ACTION_PLAN.md  TEST_IMPROVEMENTS.md  TEST_IMPROVEMENT_LOG.md  TEST_IMPROVEMENT_TASKS.md  TEST_METRICS_COMPARISON.md  TEST_STATUS.md  conftest.py  mutation_test_windows.py  test_ai_integration.py  test_another_feature.py  test_cli.py  test_cli_convert_sequence.py  test_command_builder.py  test_commit_handler_speed.py  test_config_manager.py  test_current_version.py  test_dataclasses.py  test_directory_manager.py  test_docker_executor.py  test_doubles.py  test_example_feature.py  test_example_tdd.py  test_file_transfer.py  test_improvements_checklist.md  test_job_queue_model.py  (+22 more)
(+358 files in other folders)
